# AxiomNet

./: .editorconfig  .gitignore  Cargo.toml  HIVE_ENGINE_RESPONSE.json  IMPLEMENTATION_SUMMARY.md  PROBLEM_STATEMENT_ANALYSIS.md  README.md  SAFETY_ANALYSIS.md  rustfmt.toml
.github/: copilot-instructions.md
config/: axiomd.toml
docs/: cryptography.md  naming.md  operations_economics.md  overlay_protocol.md  routing.md  virtual_networking.md
specs/: axiom_network_specification.md
src/: control.rs  crypto.rs  crypto_tests.rs  dht.rs  identity.rs  lib.rs  main.rs  noise.rs  peer.rs  protocol.rs  protocol_tests.rs  router.rs  routing.rs  session.rs  topology.rs  topology_tests.rs  transport.rs  tun.rs  tun_adapter.rs  udp.rs  wasm.rs
tests/: integration_test.rs
