[package]
name = "axiomd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "net", "io-util", "signal", "time"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tun = { version = "0.6", features = ["async"] }
socket2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
snow = "0.9"
base64 = "0.22"
dashmap = "5.5"
bytes = "1.5"
blake2 = "0.10"
once_cell = "1.19"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
num-complex = "0.4"
rand = "0.8"
parking_lot = "0.12"
